nav fix slight alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -73,7 +73,7 @@ nav {
   margin-bottom: -50px;
   margin-top: 60px;
   justify-content: right;
-  width: 107%;
+  width: 103%;
 }
 
 @media (max-width: 767px) {
@@ -83,7 +83,9 @@ nav {
     flex-direction: row-reverse;
     text-align: center;
   }
-
+  .navbar {
+    width: 110%;
+  }
   .NavTitle {
     left: -6px;
   }
